tests/snapshots/test__from_fixtures@pattern__pattern_add.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    type: string
  rhs:
    pattern: "^[a-z]+$"
    type: string
input_file: tests/fixtures/pattern/pattern_add.json
---
[
    Change {
        path: "",
        change: PatternAdd {
            added: "^[a-z]+$",
        },
    },
]
