tests/snapshots/test__from_fixtures@pattern__pattern_change.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    pattern: "^[a-z]+$"
    type: string
  rhs:
    pattern: "^[A-Z]+$"
    type: string
input_file: tests/fixtures/pattern/pattern_change.json
---
[
    Change {
        path: "",
        change: PatternChange {
            old_pattern: "^[a-z]+$",
            new_pattern: "^[A-Z]+$",
        },
    },
]
