tests/snapshots/test__from_fixtures@pattern__pattern_remove.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    pattern: "^[a-z]+$"
    type: string
  rhs:
    type: string
input_file: tests/fixtures/pattern/pattern_remove.json
---
[
    Change {
        path: "",
        change: PatternRemove {
            removed: "^[a-z]+$",
        },
    },
]
