tests/snapshots/test__from_fixtures@pattern__pattern_unchanged.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    pattern: "^[a-z]+$"
    type: string
  rhs:
    pattern: "^[a-z]+$"
    type: string
input_file: tests/fixtures/pattern/pattern_unchanged.json
---
[]
